# rag-ingestor

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
src/rag_ingestor/: config.py  di_container.py  factory.py  main.py  routes.py  schemas.py
src/rag_ingestor/adapters/loaders/: __init__.py  base.py  csv_loader.py  loader_manager.py  pdf_loader.py  text_loader.py
src/rag_ingestor/adapters/outbound/: __init__.py
src/rag_ingestor/adapters/outbound/inmemory/: message_queue_adapter.py
src/rag_ingestor/adapters/outbound/kafka/: message_queue_adapter.py
src/rag_ingestor/adapters/outbound/langchain/: document_loader_adapter.py  text_chunking_adapter.py
src/rag_ingestor/adapters/queue/: base.py  factory.py  kafka.py  memory.py
src/rag_ingestor/adapters/splitters/: __init__.py  base.py  factory.py  markdown_splitter.py  plain_splitter.py  splitter_manager.py
src/rag_ingestor/api/: dependencies.py  routes.py  schemas.py
src/rag_ingestor/application/: services.py
src/rag_ingestor/domain/: model.py
src/rag_ingestor/ingestion/: chunker.py  file_loader.py  text_splitter.py
src/rag_ingestor/ingestion/loaders/: csv_loader.py  pdf_loader.py  text_loader.py
src/rag_ingestor/ports/outbound/: content_loader_port.py  message_queue_port.py  text_chunking_port.py
src/rag_ingestor/services/: document_service.py  embedder.py  ingestion_service.py  kafka_producer.py  kafka_service.py
tests/: conftest.py  test_chunker.py  test_ingestion_service.py  test_text_splitter.py
tests/unit/adapters/: test_loaders.py  test_queue.py  test_splitters.py
tests/unit/adapters/outbound/langchain/: test_document_loader_adapter.py  (+1 more)
tests/unit/domain/: test_model.py
tests/unit/services/: test_document_service.py  test_ingestion_service.py
