[project]
name = "rag-ingestor"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "httpx (>=0.28.1,<0.29.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "uuid (>=1.30,<2.0)",
    "langchain-community (>=0.3.20,<0.4.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "langchain-text-splitters (>=0.3.7,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "aiokafka (>=0.12.0,<0.13.0)"
]


[tool.poetry]
packages = [{ include = "rag_ingestor", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
black = "^25.1.0"
ruff = "^0.11.2"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
